--- a/pages/nameGen.html
+++ b/pages/nameGen.html
@@ -1,69 +1,82 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NS - Name Generator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/nameGen.css">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>NS - Name Generator</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/nameGen.css">
 </head>
-  <body>
 
-    <h1 class="my-5"><span class="backBtn" id="backBtn"> << </span>Name Generator</h1>
-    
-    <div class="container my-4">
-      <div class="row">
-        <div class="col">
-          <h3 id="injectStudentHere"> --- </h3>
+<body>
+
+  <h1 class="my-5"><span class="backBtn" id="backBtn">
+      << </span>Name Generator</h1>
+
+  <div class="container my-4">
+    <div class="row">
+      <div class="col">
+        <h3 id="injectStudentHere"> --- </h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="container my-4">
+    <div class="row">
+      <div class="col d-flex justify-content-center">
+        <div class="prevStudentTable">
+          <div class="row">
+            <div class="col">
+              <p><strong>Previous Students</strong></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p id="studentOne"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p id="studentTwo"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p id="studentThree"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p id="studentFour"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p id="studentFive"></p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="container my-4">
-      <div class="row">
-        <div class="col d-flex justify-content-center">
-          <table class="table prevStudentTable">
-            <thead>
-              <tr>
-                <th scope="col">
-                  Previous Students
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td id="studentOne"></td>
-              </tr>
-              <tr>
-                <td id="studentTwo"></td>
-              </tr>
-              <tr>
-                <td id="studentThree"></td>
-              </tr>
-              <tr>
-                <td id="studentFour"></td>
-              </tr>
-              <tr>
-                <td id="studentFive"></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <button id="rndBtn" type="button" class="btn rndBtn">Generate Name</button>
       </div>
     </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <button id="rndBtn" type="button" class="btn rndBtn">Generate Name</button>
-        </div>
-      </div>
-    </div>
+  </div>
 
 
-    <!-- No Touch -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../scripts/nameGen.js"></script>
+  <!-- No Touch -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="../scripts/nameGen.js"></script>
 </body>
+
 </html>
